// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3id getIdFromEthAddress should create a new identity on first call 1`] = `"did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy"`;

exports[`3id getIdFromEthAddress should create a new identity on first call 2`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy",
  "publicKey": Array [
    Object {
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
      "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#encryptionKey",
      "publicKeyBase64": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "ethereumAddress": "0x12345",
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#managementKey",
      "type": "Secp256k1VerificationKey2018",
    },
  ],
}
`;

exports[`3id getIdFromEthAddress should create a new identity when passed a contentSignature 1`] = `"did:3:bafyreiacmttqrvqnlv5ig2zyxgwk2zyb2kmr5uymio6z2efmfmbmztowyq"`;

exports[`3id getIdFromEthAddress should create a new identity when passed a contentSignature 2`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyreiacmttqrvqnlv5ig2zyxgwk2zyb2kmr5uymio6z2efmfmbmztowyq#signingKey",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyreiacmttqrvqnlv5ig2zyxgwk2zyb2kmr5uymio6z2efmfmbmztowyq",
  "publicKey": Array [
    Object {
      "id": "did:3:bafyreiacmttqrvqnlv5ig2zyxgwk2zyb2kmr5uymio6z2efmfmbmztowyq#signingKey",
      "publicKeyHex": "04f946a2d88587620c5f35ed454b56693f889143eb8b6a09add775323ee48eea50f975da450eb17e84bbc7789d5a5e2e81b801d518738aa2296b97085543b92162",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreiacmttqrvqnlv5ig2zyxgwk2zyb2kmr5uymio6z2efmfmbmztowyq#encryptionKey",
      "publicKeyBase64": "Pr8/CUkw2aisoqnMSJkeOggGD51YwFR0DLrvyeWvhH8=",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "ethereumAddress": "0xlmnop",
      "id": "did:3:bafyreiacmttqrvqnlv5ig2zyxgwk2zyb2kmr5uymio6z2efmfmbmztowyq#managementKey",
      "type": "Secp256k1VerificationKey2018",
    },
  ],
}
`;

exports[`3id keyring logic should get public keys correctly 1`] = `
Object {
  "asymEncryptionKey": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
  "ethereumKey": "03097eb9e3569a8fd3f29e2265675a7cfab642059ad9ad547e40b8cc24d97b4208",
  "signingKey": "02e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e588",
}
`;

exports[`3id keyring logic should get public keys correctly 2`] = `
Object {
  "asymEncryptionKey": "zaPBNwm0qXFe9lUAqldGuhNdle6jbRtyUISoO+S3CBY=",
  "ethereumKey": "03298b45557685dbfbbffa6d1a5dbcc066b602542733d1054918b594872a7cffa0",
  "signingKey": "03a514c9de733883c7e264353988188dd815677af6d219068b540077a8eeaf5aad",
}
`;

exports[`3id keyring logic should get public keys correctly 3`] = `
Object {
  "asymEncryptionKey": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
  "ethereumKey": "04097eb9e3569a8fd3f29e2265675a7cfab642059ad9ad547e40b8cc24d97b42081976af28b7e74464692ccf949742376b84c2d06ce1de6d37bcc25c42770bbaf7",
  "signingKey": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
}
`;

exports[`3id keyring logic should get public keys correctly 4`] = `
Object {
  "asymEncryptionKey": "zaPBNwm0qXFe9lUAqldGuhNdle6jbRtyUISoO+S3CBY=",
  "ethereumKey": "04298b45557685dbfbbffa6d1a5dbcc066b602542733d1054918b594872a7cffa0cd4b428c1d8b2615ab1b9bf3b23c20fa12203c01446d2d52ab5f766cd422ccd9",
  "signingKey": "04a514c9de733883c7e264353988188dd815677af6d219068b540077a8eeaf5aad8ca93b512006fd50257347f849475dfe719acfc60256e40b5f4399dcc7350bbf",
}
`;

exports[`3id keyring logic should hashDBKey correctly 1`] = `"b932fe7ab"`;

exports[`3id keyring logic should hashDBKey correctly 2`] = `"b932fe7ab"`;

exports[`3id keyring logic should init space keyrings correctly 1`] = `"did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy"`;

exports[`3id keyring logic should init space keyrings correctly 2`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy#subSigningKey",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy",
  "proof": Object {
    "alg": "ES256K",
    "signature": "6ENPqmm0sZZiAYfxj3pLNV1CxmNepRfDXe92c-Gz_HerFnUlQ8qK8SfJ1kcpyjyr-vq7kLZ4t9I4E6_cd21ssw",
  },
  "publicKey": Array [
    Object {
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
      "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#encryptionKey",
      "publicKeyBase64": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "ethereumAddress": "0x12345",
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#managementKey",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy#subSigningKey",
      "publicKeyHex": "04a514c9de733883c7e264353988188dd815677af6d219068b540077a8eeaf5aad8ca93b512006fd50257347f849475dfe719acfc60256e40b5f4399dcc7350bbf",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreig4qyx4p5kscxzextx6icfapqwhlryo64m6sfacy67jnuwnfyludy#subEncryptionKey",
      "publicKeyBase64": "zaPBNwm0qXFe9lUAqldGuhNdle6jbRtyUISoO+S3CBY=",
      "type": "Curve25519EncryptionPublicKey",
    },
  ],
  "root": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy",
  "space": "space1",
}
`;

exports[`3id keyring logic should init space keyrings correctly 3`] = `"did:3:bafyreihflugvhgu5gxh5yxeajxsrw5mxv46ejsp3ga24jvtli25az4r3cm"`;

exports[`3id keyring logic should init space keyrings correctly 4`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyreihflugvhgu5gxh5yxeajxsrw5mxv46ejsp3ga24jvtli25az4r3cm#subSigningKey",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyreihflugvhgu5gxh5yxeajxsrw5mxv46ejsp3ga24jvtli25az4r3cm",
  "proof": Object {
    "alg": "ES256K",
    "signature": "r5tZSizljdgVmjb1SOIQjavqxw8s8LS1CNPrIyGq-9kYnlNbqH5yT2UcZPyexeyji08x3Og9ymPMYfSVJxwnNA",
  },
  "publicKey": Array [
    Object {
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
      "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#encryptionKey",
      "publicKeyBase64": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "ethereumAddress": "0x12345",
      "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#managementKey",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreihflugvhgu5gxh5yxeajxsrw5mxv46ejsp3ga24jvtli25az4r3cm#subSigningKey",
      "publicKeyHex": "04a514c9de733883c7e264353988188dd815677af6d219068b540077a8eeaf5aad8ca93b512006fd50257347f849475dfe719acfc60256e40b5f4399dcc7350bbf",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:bafyreihflugvhgu5gxh5yxeajxsrw5mxv46ejsp3ga24jvtli25az4r3cm#subEncryptionKey",
      "publicKeyBase64": "zaPBNwm0qXFe9lUAqldGuhNdle6jbRtyUISoO+S3CBY=",
      "type": "Curve25519EncryptionPublicKey",
    },
  ],
  "root": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy",
  "space": "space2",
}
`;

exports[`3id login/out logic should log out correctly 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy",
    "publicKey": Array [
      Object {
        "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
        "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
        "type": "Secp256k1VerificationKey2018",
      },
      Object {
        "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#encryptionKey",
        "publicKeyBase64": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
        "type": "Curve25519EncryptionPublicKey",
      },
      Object {
        "ethereumAddress": "0x12345",
        "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#managementKey",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOm51bGwsImRhdGEiOiJzb21lIGRhdGEiLCJpc3MiOiJkaWQ6MzpiYWZ5cmVpZnY2cHdmZDdiZWZzMjV3dWVreW9rZDNoaXFmNHhoNmE3NG12bnhocmNpdTI1bG0zc3V6eSJ9.PJ80TSj1qFOmP_rKCaMAzA-Q_SgCfi8OhpyCfOIuG9jR27Nk4_al6UefpaDZsFMGQDTrk-84DHok6RKE8kdh0A",
  "payload": Object {
    "data": "some data",
    "iat": null,
    "iss": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy",
  },
  "signer": Object {
    "id": "did:3:bafyreifv6pwfd7befs25wuekyokd3hiqf4xh6a74mvnxhrciu25lm3suzy#signingKey",
    "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;
